--- a/algos4/CMakeLists.txt
+++ b/algos4/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.24)
-project(algos_3)
+project(algos4)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(algos_3 main.cpp)
+add_executable(algos4 main.cpp)
